trying to change font

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -17,6 +17,9 @@
     <link href="{{ ASSET_PATH }}/css/skeleton.css" rel="stylesheet" type="text/css" media="all">
 
     <link rel="shortcut icon" href="images/favicon.ico">
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
   <!-- Update these with your own images
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
